Solved many bugs.

--- a/Resources/Images.resx
+++ b/Resources/Images.resx
@@ -2991,4 +2991,21 @@
         RU5ErkJggg==
 </value>
   </data>
+  <data name="flag_yellow" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAACbUlEQVQ4T5WTS0hUYRiGP3W8
+        QrSI2nbZtGnRZWOOSpFEq6IW2aKgoiQxg4QksdGx6AIFURC0CS0VmTmOzsVLmhSEdjM1RLPMchgdpTJa
+        dMfo6TvnjDYLIzrwwn/4v//53+893xHD7Qw0uLK5d2lNHS1SgF/6aBLwxalZvhNIvkAoTQilx2SvxVu5
+        kT7fMWjVAw/yYKQS3rXDjwj8jMLsNEQNLGjbEiGQtA5/Qr5e1EUgBfFUZPLEOAoBLZj9DJFaCF+BsXKY
+        PKfvZxT2Hhp1P5gCd9fCfSfMdEOzxABeBfi1YKZHN3OhbycMH4A36mysED72gkf3P43A1zB8GYdvby1X
+        tgMTYDqYaoXuLdC/G54fhvHj8LpYW+qyAR/q4cVBeLxN148WAITroGcrDJiAAgWUKEBdTPnAq4AJbevl
+        EejdDtMdCwBGrypA6QN7NEwtDJ+wIeFqGzDpgtEieKotTnjiM1CbQS0YPgsPd8DgfhhSDe+NubgGhgmo
+        iAF2qbPrcQBDAS1a0Lka2pdqoAl/pEnTtsyei6gbXmltf75mcdGqsUJ81qT9hhKZvOkI1JY4CkVkw5wI
+        pqm7VA05Wfs+r1+m1M6gcxWRGw6feBUw0FRETVkuemiFahGhDJ0yW8bJ1OJfwfRZC+JPtG6dqknquHwo
+        aZ/WLtdJzGTQX0iDK4tb5ZuFDofQqmPaYo5shtbIYtX6eFe6XqnKsPbnAKYTT2WO1J5SyJ1EoT3FBsW5
+        WWgthjoYChZh6D/RWOUUrztH6l2bpLosz4b8C9BYlYXhNg9n4TvtFFNGVbbUmU5uJ8+38jeQ2eN84ubL
+        /z6/AclnVrUf6TmAAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
